k8s/edge-proxy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: edge-proxy
spec:
  type: LoadBalancer
  selector:
    app: edge-proxy
  ports:
    - name: https
      port: 443
      protocol: "TCP"
      targetPort: 8080
